Fixed initial RWD issues on mobile - padding with main element caused issues with viewport sizing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 }
 
 html {
+  width: 100%;
+  height: 100%;
 }
 
 main {
@@ -16,7 +18,7 @@ main {
   max-width: 1000px;
   border-radius: 10px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 0px;
   z-index: 1000;
 }
 
@@ -32,18 +34,20 @@ h1 {
 p {
   color: white;
   font-family: sans-serif;
+  padding: 5px;
 }
 
 .stars, .twinkling, .clouds {
   position:absolute;
   top:0; left:0; right:0; bottom:0;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   display:block;
 }
 
 .stars {
   background:#000 url(images/stars.png) repeat top center;
+  background-size: cover;
   width: 100%;
   z-index:0;
 }
@@ -54,9 +58,13 @@ p {
 }
 
 @media only screen and (min-width: 800px) {
-h1 {
-  font-size: 50pt;
-}
+  h1 {
+    font-size: 50pt;
+  }
+
+  main {
+    padding: 20px;
+  }
 
   /* ===================================
      Parallax Moving Background
